@@ -1,9 +1,12 @@
 --- getdelta.sh
 +++ getdelta.sh
-@@ -25,6 +25,14 @@
+@@ -25,6 +25,17 @@
  VERSION="0.7"
  
  # Changelog
++# Changes since 2008 are by Martin V\"ath <martin@mvath.de>
++# version 0.7.12  2010/09/27
++#		- Improve treatment of fetch errors
 +# version 0.7.11  2010/09/14
 +#		- Support alternative location of make.global and
 +#		  both locations of make.conf
@@ -15,12 +18,12 @@
  # version 0.7.8   2007/07/13
  #		- added option -O to call of emerge when finding mirrors
  #		- replaced some calls of coreutils with bash-internals
-@@ -292,6 +300,12 @@
+@@ -292,6 +303,12 @@
  	echo $vser
  }
  
 +GotFile() {
-+	test -s "${1}" && {
++	[ -n "${1}" ] && test -s "${1}" && {
 +		[ "$(head -c5 -- "${1}")" = "sorry" ] || \
 +		[ "$(file -bi -- "${1}" | cut -d"/" -f1)" = "application" ]
 +	}
@@ -28,7 +31,7 @@
  
  # some colors for colored output
  output() {
-@@ -326,13 +340,13 @@
+@@ -326,13 +343,13 @@
  
  remove() {
  	output "${GREEN}You have chosen to remove ${CYAN}$1\n"
@@ -44,7 +47,7 @@
  	popd >/dev/null 2>&1
  }
  
-@@ -349,7 +363,7 @@
+@@ -349,7 +366,7 @@
  			-e "s/src4/srcDDD/g" \
  			-e "s/src5/srcEEE/g" \
  			-e "s/src6/srcFFF/g" \
@@ -53,7 +56,7 @@
  	fi
  	
  	# ignore PR for src-files of firefox
-@@ -375,7 +389,7 @@
+@@ -375,7 +392,7 @@
  		   -e "s/rc//g" \
  		   -e "s/[\._-]//g" \
  		   -e "s/\+//g" \
@@ -62,7 +65,7 @@
  }
  
  # create or update a config-file
-@@ -384,6 +398,7 @@
+@@ -384,6 +401,7 @@
  add_to_configfile LOCAL_MIRROR "" "set this to one or more (space separated) URI ending with '/' if you want to check one or more local mirror(s) first\n# most people just leave it empty."
  add_to_configfile DELTUP_SERVER "http://linux01.gwdg.de/~nlissne/deltup.php" "deltup-server to use"
  add_to_configfile FETCH "/usr/bin/wget -t 1 --passive-ftp" "command to use for downloading"
@@ -70,7 +73,7 @@
  add_to_configfile QUEUERETRY 15 "number of seconds to wait before a queued request is retried"
  add_to_configfile MAXIMUM_ACCEPTABLE_QUEUEPOS "15" "the maximum queuepos you would accept (if higher download full archive instead)"
  add_to_configfile QUEUETIMEOUT 900 "when a dtu-request is queued - how long should we wait max. before downloading the original archive instead (in seconds)"
-@@ -424,21 +439,26 @@
+@@ -424,21 +442,26 @@
  add_to_donotremove "^rp-pppoe"
  
  
@@ -101,7 +104,7 @@
  
  
  if ${COLOR} 
-@@ -464,9 +484,10 @@
+@@ -464,9 +487,10 @@
  	output "use getdelta.sh for your FETCHCOMMAND, only." &&
  	sleep 5 && exit 1
  
@@ -114,7 +117,7 @@
  
  # repoman downloads metadata.dtd with FETCHCOMMAND
  # this should not be done with getdelta - so just fetch the file and exit
-@@ -475,7 +496,7 @@
+@@ -475,7 +499,7 @@
  # dtu files.
  if [ "${NEW_FILE}" = "metadata.dtd" ] || [ "$GETDELTA" = "0" ]
  then
@@ -123,7 +126,7 @@
  	exit $?
  fi
  
-@@ -516,7 +537,7 @@
+@@ -516,7 +540,7 @@
  #
  output "${GREEN}Searching for a previously downloaded file in ${YELLOW}${DISTDIR}\n"
  
@@ -132,7 +135,7 @@
  length_first_chars=${#first_chars}
  [ $length_first_chars -lt 3 ] && first_chars="${NEW_FILE:0:2}"
  
-@@ -527,7 +548,7 @@
+@@ -527,7 +551,7 @@
  let len1=${#mask}
  filelist=""
  
@@ -141,7 +144,7 @@
  do
  	mask2=$(mask_name "${name}")
  	# add any file, that results in the same mask or differ not more than two letters
-@@ -582,7 +603,7 @@
+@@ -582,7 +606,7 @@
  
  	# find matching part of filename - first: frontmatch
  	x=0;
@@ -150,7 +153,7 @@
  	match=""
  	while [ -z "$match" ]
  	do
-@@ -657,7 +678,7 @@
+@@ -657,7 +681,7 @@
  	FILE_IS_CORRUPT=false
  	if $CHECK_OLD_FILE 
  	then
@@ -159,7 +162,7 @@
  		if [ "$file_digest" ]
  		then
  			file_md5=$(cut -d ' ' -f2 <<< "$file_digest") 
-@@ -669,7 +690,7 @@
+@@ -669,7 +693,7 @@
  				FILE_IS_CORRUPT=true
  			fi
  		else
@@ -168,7 +171,14 @@
  			then
  				output "${YELLOW}Could not find a digest-file for ${CYAN}${best_candidate}${YELLOW}. Testing file integrity with tar.\n"
  				if ! tar -tf ${best_candidate} >/dev/null
-@@ -698,17 +719,17 @@
+@@ -694,21 +718,23 @@
+ 			    sed -e "s/ /\\n/g" | egrep "(http|ftp)://" | 
+ 			    grep "${NEW_FILE}" | tail -n 1)
+ 		query="?have=${best_candidate}&want=${NEW_FILE}&url=${QUERY_URL}&version=${VERSION}&time=$(date +%s)"
+-		output "${GREEN}Trying to download ${YELLOW}${best_candidate}-${NEW_FILE}.dtu\n"
++		dtubase="${best_candidate}-${NEW_FILE}"
++		dtufile="${dtubase}.dtu"
++		output "${GREEN}Trying to download ${YELLOW}${dtufile}\n"
  
  		# Remember where we are, and go to a new dir there we can work
  		tmp_dwn_dest="${DISTDIR}/.getdelta-`date +%N`-tmp"
@@ -186,11 +196,11 @@
  		[[ $TIMELIMIT -lt $QUEUETIMEOUT ]] && QUEUETIMEOUT=$TIMELIMIT
  			
 -		if $FETCH "${DELTUP_SERVER}${query}"
-+		if $FETCHNAME "${best_candidate}-${NEW_FILE}.dtu" "${DELTUP_SERVER}${query}"
++		if $FETCHNAME "${dtufile}" "${DELTUP_SERVER}${query}"
  		then
  			# thanks to deelkar for this much more elegant solution to the "broken pipe" problem with "head -n1"
  			GOTFILE=$(ls -c | sed -n 1p) 
-@@ -718,14 +739,14 @@
+@@ -718,14 +744,14 @@
  			# may have sento to us.
  			
  			# first: the request have been queued
@@ -209,44 +219,68 @@
  					rm -f deltup-queued
  					TSTAMP=$(date +%s)
  					if ((TSTAMP<QTMOUT)) && ((QUEUEPOS<=MAXIMUM_ACCEPTABLE_QUEUEPOS))
-@@ -741,7 +762,7 @@
+@@ -741,18 +767,18 @@
  							sleep 1
  						done
  						echo -n -e "${NORMAL}"
 -						$FETCH "${DELTUP_SERVER}${query}"
-+						$FETCHNAME "${best_candidate}-${NEW_FILE}.dtu" "${DELTUP_SERVER}${query}"
++						$FETCHNAME "${dtufile}" "${DELTUP_SERVER}${query}"
  						GOTFILE=$(ls -c | sed -n 1p)
  					else
  						if ((TSTAMP>=QTMOUT))
-@@ -761,20 +782,20 @@
+ 						then 
+-							GOTFILE="timeout"
++							GOTFILE=''
+ 							output "\n${RED}TIMEOUT exceeded.\n"
+ 							break
+ 						fi
+ 						if ((QUEUEPOS>MAXIMUM_ACCEPTABLE_QUEUEPOS))
+ 						then
+-							GOTFILE="unacceptable"
++							GOTFILE=''
+ 							output "\n${RED}You have configured getdelta.sh not to accept this queue-position.\n"
+ 							output "${YELLOW}We are going to download the ${RED}full archive${YELLOW} instead.\n"
+ 							break
+@@ -761,21 +787,31 @@
  				done
  			fi
  			
 -			if [ -f ${best_candidate}-${NEW_FILE}.failed ]
-+			if [ -f "${best_candidate}-${NEW_FILE}.failed" ] || [ "$(head -c5 -- "${GOTFILE}")" = "sorry" ]
++			[ -n "${GOTFILE}" ] && test -f "${GOTFILE}" || GOTFILE=""
++			newfile_failed="${dtubase}.failed"
++			test -f "${newfile_failed}" || newfile_failed=""
++			if [ -n "${newfile_failed}" ] || {
++				[ -n "${GOTFILE}" ] && [ "$(head -c5 -- "${GOTFILE}")" = "sorry" ]
++			}
  			then
  				output "\n${RED}The server could not build the dtu-file for ${NEW_FILE}\n" 
 -				output "${YELLOW}reason:\n${RED}$(cat ${best_candidate}-${NEW_FILE}.failed)\n" 
 -				rm -rf ${best_candidate}-${NEW_FILE}.failed
-+				output "${YELLOW}reason:\n${RED}$(cat "${best_candidate}-${NEW_FILE}.failed" "${GOTFILE}")\n"
-+				rm -rf -- "${best_candidate}-${NEW_FILE}.failed" "${GOTFILE}"
++				output "${YELLOW}reason:\n${RED}$(
++					[ -n "${newfile_failed}" ] && cat -- "${newfile_failed}"
++					[ -n "${GOTFILE}" ] && cat -- "${GOTFILE}")\n"
++				rm -f -- "${newfile_failed}" "${GOTFILE}"
  			fi
  
 -			if [ -f ${best_candidate}-${NEW_FILE}.dtu ]
-+			if [ -f "${best_candidate}-${NEW_FILE}.dtu" ]
++			[ -n "${dtufile}" ] && test -f "${dtufile}" || dtufile=""
++			if test -f "${dtufile}"
  			then
  				output "${GREEN}Successfully fetched the dtu-file - let's build ${NEW_FILE}...\n" 
 -				downloadsize=$(stat -c %s  ${best_candidate}-${NEW_FILE}.dtu)
 -				if deltup -p -v -D ${DISTDIR} ${best_candidate}-${NEW_FILE}.dtu 
-+				downloadsize=$(stat -c %s "${best_candidate}-${NEW_FILE}.dtu")
-+				if deltup -p -v -D "${DISTDIR}" "${best_candidate}-${NEW_FILE}.dtu"
++				downloadsize=$(stat -c %s -- "${dtufile}")
++				if deltup -p -v -D "${DISTDIR}" "${dtufile}"
  				then 
 -					newsize=$(stat -c %s ${NEW_FILE})
-+					newsize=$(stat -c %s "${NEW_FILE}")
++					newsize=$(stat -c %s -- "${NEW_FILE}")
++					: ${newsize:=0}
  					let savedsize=${newsize}-${downloadsize}
++					[ ${newsize} -eq 0 ] && percent=-100 || \
  					let percent=${savedsize}*100/${newsize}
  					unit="bytes"
-@@ -791,8 +812,8 @@
+ 					[ $savedsize -gt 1024 ] && let savedsize=$savedsize/1024 && unit="kB"
+@@ -791,8 +826,8 @@
  					esac
  					output "${YELLOW}This dtu-file saved ${UCOLOR}${savedsize} ${unit} (${percent}%)${YELLOW} download size.\n"
  				fi
@@ -257,7 +291,7 @@
  			fi
  
  		fi # if $FETCH "${DELTUP_SERVER}${query}"
-@@ -812,7 +833,7 @@
+@@ -812,7 +847,7 @@
  			read
  		fi
  		popd >/dev/null 2>&1
@@ -266,7 +300,7 @@
  		#stop respond to trap2
  		trap 2
  	fi # if ! FILE_IS_CORRUPT
-@@ -824,10 +845,10 @@
+@@ -824,10 +859,10 @@
  	
  # Ok, once we are here, we should have got the delta (and used it)
  # or we still have to download the full file
