@@ -4,6 +4,9 @@
 
 *getdelta-0.7.8 (07 Apr 2010)
 
+  27 Sep 2010; Martin Väth <martin@mvath.de>
+  Improve treatment of fetch errors. Bump to force upgrade.
+
   14 Sep 2010; Martin Väth <martin@mvath.de>
   Support alternative location of make.globals and both locations of make.conf
   Bump to force upgrade.
